--- a/4.0.1.ComponentesImpresora3D.md
+++ b/4.0.1.ComponentesImpresora3D.md
@@ -10,7 +10,7 @@ Una de las partes fundamentales de toda impresora es el conjunto extrusor + fuso
 
 El funcionamiento de una extrusor es muy sencillo conceptualmente: se trata simplemente de un motor que es capaz de mover el filamento de una forma precisa al mismo tiempo que lo funde para conseguir que se aporte una cantidad exacta de material.
 
-![extrusor](./images/EXTRUDER.png) 
+![Extrusor + fusor](./images/EXTRUDER.png) 
 
 Este componente es tan importante que le vamos a dedicar una parte en exclusiva.
 
@@ -18,7 +18,7 @@ Este componente es tan importante que le vamos a dedicar una parte en exclusiva.
 
 ![Base de una impresora KingRoon 3D](./images/base.jpg)
 
-La base es la superficie lisa dónde imprimiremos. Suele incluir un componente calefactor que la calienta para mejorar la adherencia de la pieza mietnras se imprime.
+La base es la superficie lisa donde imprimiremos. Suele incluir un componente calefactor que la calienta para mejorar la adherencia de la pieza mientras se imprime.
 
 
 Habitualmente  incluyen un sistema de tornillos y de muelles para ajustar  la horizontalidad de la base. Esto es fundamental para que el extrusor se mueva de una forma cuanto más paralela mejor a toda la estructura de la base de ahí la necesidad de calibrar
@@ -33,33 +33,33 @@ Encima de la base se suele colocar una superficie  bien para mejorar la adherenc
 
 *  Un cristal o espejo,  con el que se consiguen acabado súper lisos,  aunque  dependiendo del tipo de cristal a veces tenemos que recurrir a añadir algún producto, como la laca, para mejorar la adherencia
 
-![](./images/PrusaEspejo.jpg)
+![Espejo en la base](./images/PrusaEspejo.jpg)
 
-![](./images/PrusaCristal.jpg)
+![Cristal en la base](./images/PrusaCristal.jpg)
 
 * Un cristal con recubrimiento adherente
 
-![](./images/crystal3d.jpg)
+![Crista con recubrimiento](./images/crystal3d.jpg)
 
 Los cristales/espejos se suelen fijar con clips a la base.
 
-En las impresoras más modernas para ajustar el nivelado/calibración se incuyen unas ruedas de gran tamaño que hacen más sencillo el ajustar los tornillosusan
+En las impresoras más modernas para ajustar el nivelado/calibración se incluyen unas ruedas de gran tamaño que hacen más sencillo el ajustar los tornillos.
 
 ## Electrónica de una impresora 3D
 
 La electrónica es una parte esencial de toda impresora 3D. Es la que gestiona el control de los diferentes motores, nos permite controlarla desde el interfaz del usuario, la comunicación con el PC, la lectura de  los ficheros GCODE desde la tarjeta y la medida de todos los diferentes sensores. De alguna forma en la que une todos los componentes y nos permite el funcionamiento final de nuestra impresora.
 
-Hasta hace muy poco la mayoría de las impresoras 3D incluían simplemente una placa Arduino Mega mas un SHIELD que contenía unos drivers para manejar los motores y toda la electrónica de potencia necesaria para controlar la temperatura del extrusor y de la base de la impresora. Este tipo de placas se solía conocer como una RAMPs
+Hasta hace muy poco la mayoría de las impresoras 3D incluían simplemente una placa Arduino Mega mas un SHIELD que contenía unos drivers para manejar los motores y toda la electrónica de potencia necesaria para controlar la temperatura del extrusor y de la base de la impresora. Este tipo de placas se solía conocer como una RAMPs.
 
 ![Placa RAMPs v1.4](./images/ramps-14.jpg)
 
 Al ser un diseño libre, Open Source, en principio todas las RAMPs eran prácticamente iguales.  Podíamos encontrar en cambio placas de diferente calidad debido a la calidad de los distintos componentes dando lugar a muchos problemas si utilizamos las de precio más bajo que se podían encontrar en el mercado.
 
-Es fácil de entender si tenemos en cuenta que estos componentes  necesitan manejar los elementos calefactores que son de mayor potencia y una mala calidad podría dar lugar a problemas de funcionamiento
+Es fácil de entender si tenemos en cuenta que estos componentes  necesitan manejar los elementos calefactores que son de mayor potencia y una mala calidad podría dar lugar a problemas de funcionamiento.
 
 Un elemento muy crítico también de estas placas eran los conectores de los cables. Una mala conexión con un plástico de mala calidad puede dar lugar a un sobrecalentamiento, a una pequeña chispa que se van produciendo, pudiendo desencadenar el que el plástico se derrita, llegando incluso a que la impresora arda. Son bastante conocidos los casos de impresoras que acaban ardiendo por una mala conexión de los cables.
 
-A estas placas teníamos que añadir los drivers de los motores paso a paso, que se suelen incluir en unos módulos independientes que posibilitaban cambiarlos en caso de que se estropearan.
+A estas placas teníamos que añadir los drivers de los motores paso a paso, que se suelen incluir en unos módulos independientes que posibilitaban el que los cambiemos en caso de que se estropearan.
 
 
 ![Driver](./images/driver.jpg)
@@ -70,13 +70,11 @@ También suelen incluir un potenciómetro para ajustar la cantidad de potencia q
 
 De la calidad de los driver depende que el movimiento de nuestra impresora sea más suave o que haga más o menos ruido.
 
-A esta placa también se conectan los diferentes sensores que miden la temperura en la base y en el fusor y los finales de carrera para posicionar con precisión el extrusor.
+A esta placa también se conectan los diferentes sensores que miden la temperatura en la base y en el fusor y los finales de carrera para posicionar con precisión el extrusor.
 
-![Finales de carrera](./images/FinalesCarrera.jpg)
+Un esquema típico de conexión sería el siguiente:
 
-Un esquema típico de conexión sería el siguiente
-
-![2](./images/EsquemaImpresora3D.png)
+![Esquema de conexión de una impresora con RAMPs](./images/EsquemaImpresora3D.png)
 
 
 #### Electrónica 32 bits
@@ -96,7 +94,7 @@ Suelen estar sobredimensionadas, para garantizar potencia de sobra.
 
 ### Motores
 
-En el 99.99 % de las impresoras se utilizan motores paso a paso para conseguir la precisión necesaria y casi siempre del formato nema17:
+En el 99.99 % de las impresoras se utilizan motores paso a paso para conseguir la precisión necesaria y casi siempre del formato Nema17:
 
 ![Motor paso a paso Nema17](./images/nema17.jpg)
 
@@ -107,6 +105,9 @@ De la calidad de los motores va a depender la velocidad y la precisión que cons
 Las impresoras 3D, como máquinas de precisión que son, también incluyen distintos tipos de sensores para garantizar los movimientos precisos de los motores y  para controlar la temperatura en diferentes puntos. Por ejemplo incluye un sensor de temperatura en la base para saber cuál es su temperatura y otro sensor de temperatura en el fusor. 
 
 Para garantizar el perfecto posicionamiento del extrusor se suelen utilizar unos pequeños microinterruptores que actúan como **finales de carrera**, es decir, que detectan al menos una de las posiciones de los extremos de los ejes. De esta forma podemos controlar con gran precisión su posición.
+
+
+![Finales de carrera](./images/FinalesCarrera.jpg)
 
 
 Algunas impresoras también incluyen **sensores de filamento** que permiten detectar si existe o no filamento, así como el grosor del mismo para conseguir una mayor calidad en la impresión
@@ -137,7 +138,7 @@ Algunas impresoras son especialmente ruidosa y podemos mejorar reducir el volume
 
 ### Impresoras más complejas
 
-A medida que se hacen más complejo el equipamiento de la impresora, se necesitan más motores y también más sensores para garantizar el correcto funcionamiento. Por ejemplo, si utilizamos un sistema de múltiples cabezales o herramientas, necesitaremos los sensores correspondientes para saber cuál de ellos tenemos colocado y que está correctamente conectado al sistema.
+A medida que se hace más complejo el equipamiento de la impresora, se necesitan más motores y también más sensores para garantizar el correcto funcionamiento. Por ejemplo, si utilizamos un sistema de múltiples cabezales o herramientas, necesitaremos los sensores correspondientes para saber cuál de ellos tenemos colocado y que está correctamente conectado al sistema.
 
 También algunas de las impresoras incluyen sistemas para cambio de filamento es decir son capaces de utilizar distintos filamentos de forma alternativa para ello es necesario conocer con precisión todos estos componentes y cuando el filamento está listo para imprimir.
 
