--- a/4.0.2.TiposExtrusores.md
+++ b/4.0.2.TiposExtrusores.md
@@ -9,14 +9,14 @@ Podemos hacer una primera división  según el extrusor y el fusor estén juntos
 Cada tipo tiene sus ventajas:
 
 *  En el extrusor Bowden al separar el motor del extrusor del fusor  podemos hacer todo el cabezal de impresión más ligero puesto que el motor del extrusor queda fijo en la estructura y solo necesitamos mover el fusor.  de esta forma conseguimos  una mayor velocidad puesto que es más fácil mover el fusor.
-*  En el extrusor directo, el que extrusor difusor estén juntos hace más sencillo el movimiento del filamento evitándonos atascos y facilitando la impresión de  algunos tipos de filamentos como los elásticos y flexibles.
+*  En el extrusor directo, el que extrusor y difusor estén juntos hace más sencillo el movimiento del filamento evitándonos atascos y facilitando la impresión de  algunos tipos de filamentos como los elásticos y flexibles.
 
 Como hemos dicho antes vamos a distinguir entre el **extrusor** propiamente dicho, qué es el mecanismo que mueve el filamento, y el **fusor** que es aquella parte donde éste se funde. 
 
 
 ### Tipos de extrusores
 
-Existen muchas implementaciones del mecanismo de los extrusores, una más sencillas y otra más complejas, Cada una de ellas con diferentes ventajas, fortalezas y debilidades.  el objetivo de toda ella es conseguir fundir y depositar la mayor cantidad posible de filamento por segundo,  eso sí manteniendo una alta calidad. 
+Existen muchas implementaciones diferentes del mecanismo de los extrusores, una más sencillas que otras, cada una de ellas con diferentes ventajas, fortalezas y debilidades. El objetivo de toda ella es conseguir fundir y depositar la mayor cantidad posible de filamento por segundo,  eso sí manteniendo una alta calidad. 
 
 
 Hablamos de **extrusión directa** cuando el motor tiene un engranaje que arrastra directamente el filamento. De esta forma garantizamos un control muy preciso. A cambio necesitamos que el motor tenga una mayor potencia.
@@ -24,22 +24,19 @@ Hablamos de **extrusión directa** cuando el motor tiene un engranaje que arrast
 ![Extrusor directo](./images/extrusor-1024x791.jpg)
 
 
-Otros extrusores utilizan un sistema de engranajes que multiplican la fuerza del motor a cambio de conseguir una mayor complejidad pero consiguiendo una buena calidad y funcionamiento con motores muy de mulhouse potencia
+Otros extrusores utilizan un sistema de engranajes que multiplican la fuerza del motor a cambio de una mayor complejidad mecánica pero consiguiendo una buena calidad y funcionamiento con motores menor potencia:
 
 ![Modelo de extrusor Greg](./images/greg_extruder.jpg)
 
-Este 2º engranaje tiene firmemente fijado un tornillo (llamado Hobbed Bolt)que dispone de muescas en la zona en la que roza el filamento para conseguir un buen agarre del filamento y así arrastrarlo firmemente.
+Este 2º engranaje tiene firmemente fijado un tornillo (llamado Hobbed Bolt) que dispone de muescas en la zona en la que roza el filamento para conseguir un buen agarre del filamento y así arrastrarlo firmemente.
 
-![](./images/Greg2.jpg)
+![Detalle de tornillo de arrastre del filamento](./images/Greg2.jpg)
 
-Este modelo es conocido como el extrusor i3 Mendel y es el que originalmente llevaba las  primeras impresoras Prusa.  ventaja de que muchas de las piezas son impresas, originalmente era complicado encontrar estos componentes para comprar.
-Extrusor i3 Mendel
+Este modelo es conocido como el extrusor i3 Mendel y es el que originalmente llevaban las  primeras impresoras Prusa.  Tiene la ventaja de que muchas de las piezas son impresas, ya que originalmente era complicado encontrar estos componentes para comprar.
 
-![](./images/Reprap-prusa-I3-Mendel-3D-impresora-de-Wade-de-Greg-engranaje-directo-set-kit-extrusora.jpg_Q90.jpg_.webp)
+Como hemos visto son complejos y necesitan de bastantes piezas impresas y otros componentes mecánicos:
 
-Son complejos y necesitan de muchas piezas impresas y otros componentes mecánicos.
-
-![](./images/Reprap-prusa-I3-Mendel-3D-impresora-de-Wade-de-Greg-engranaje-directo-set-kit-extrusora.jpg_Q90.jpg_piezas.webp)
+![](./images/Reprap-prusa-I3-Mendel-3D-impresora-de-Wade-de-Greg-engranaje-directo-set-kit-extrusora.jpg_Q90.jpg_piezas.jpg)
 
 La gran ventaja es que tenemos disponibles distintos modelos como [éste](https://www.thingiverse.com/thing:961630) y [este](https://www.thingiverse.com/thing:362217) que podemos descargar  para reparar o adaptar.
 
@@ -50,11 +47,11 @@ Todos tienen en común el que utilizan unos muelles para  conseguir una buena tr
 
 ## Estructura del fusor
 
-
+El fusor es un componentes fundamental y vamos a estudiarlo con detalle.    
 
 ![Partes del fusor y las diferentes temperaturas de cada una](./images/imagen_hotend.jpg)
 
-La parte más sencilla es la **boquilla**  o nozzle (A), está en la parte final y nos garantiza que la extrusión del filamento va a tener un tamaño controlado. Normalmente están hechas de latón y sufre un gran desgaste. En contra de lo que uno podría pensar, el plástico fundido es capaz de desgastarla, y es necesario cambiarla cada cierto tiempo.
+La parte más sencilla es la **boquilla**  (A) y tiene un pequeño orificio por sale el fino hilo del filamento. El diámetro de este orificio o nozzle  es una características fundamental que necesitamos conocer para generar bien las piezas en el proceso de laminado. Está en la parte final del fusor y nos garantiza que la extrusión del filamento va a tener un tamaño controlado. Normalmente están hechas de latón y sufre un gran desgaste. En contra de lo que uno podría pensar, el plástico fundido es capaz de desgastarla, y es necesario cambiarla cada cierto tiempo.
 
 La parte central del fusor está formada por una cilindro largo que tiene que tener al mismo tiempo una temperatura alta por un extremo, que dónde se producirá propiamente la fundición del plástico y por el otro extremo debe tener la temperatura lo más baja posible, para conseguir que el filamento se deslice y no pegue. De ahí que en esta parte se suele incluir unos elementos disipadores y un ventilador para que la temperatura sea baja en la zona adecuada.
 
@@ -64,9 +61,9 @@ Dentro de este cilindro o **barrel** se suele incluir un tubo de un material con
 
 También se considera un elemento fungible y que tenemos que  reemplazar cada cierto número de horas de impresión.
 
-Los fusores suelen incluir en la parte de fuera del disipador un ventilador que contribuye a que la temperatura del esta parte del extrusor sea lo más baja posible
+Los fusores suelen incluir en la parte de fuera del disipador un ventilador que contribuye a que la temperatura del esta parte del extrusor sea lo más baja posible.
 
-Algo habitual es utilizar boquillas de diferente diámetro, dependiendo de si queremos extruir mucho plástico o queremos más precisión y un mayor detalle
+Algo habitual es utilizar boquillas de diferente diámetro, dependiendo de si queremos extruir mucho plástico o queremos más precisión y un mayor detalle:
 
 ![Boquillas de distinto diámetro](./images/boquillas.jpg)
 
@@ -74,52 +71,41 @@ La diferencia en cuanto a tiempo de impresión y a calidad entre diferentes boqu
 
 ![Comparación 0.4 vs 0.8mm](./images/XYZ-Cube-0.4mm-and-0.8mm-Nozzle-and-Their-Settings-Results.jpg)
 
-Aunque la estructura del fusor de la impresora está preparado para cambiar de boquilla con relativa facilidad, es un proceso en el que tenemos que ser muy cuidadosos y no está recomendado si no tenemos cierta experiencia, porque de no hacerlo bien y no ajustarla adecuadamente  podemos dar lugar a atascos.
+Aunque la estructura del fusor de la impresora está preparado para que podamos cambiar de boquilla con relativa facilidad, es un proceso en el que tenemos que ser muy cuidadosos y no está recomendado si no tenemos cierta experiencia, porque de no hacerlo bien y no ajustarla adecuadamente  podemos dar lugar a atascos.
 
-## Extrusor barato
+Veamos algunos tipos de extrusores habituales hoy en día:
+
+* Extrusor MK8 directo + fusor: suele utilizarse en muchas impresoras actuales
 
 ![](./images/extrusor-mk8-de-impresora-3d-04mm-175mm-con-motor-extrusor-y-hotend.jpg)
 
-
-## Extrusor barato 2
-
-![](./images/extrusores.jpg)
-
-
-
-## Extrusor E3D v6.1
-
-![Extrusor E3D v6.1](./images/v-6-175-500-x-500.png)
-
-TODO: explicar partes
-
+* Extrusor Titan + fusor E3D: se trata del conjunto más utilizado de mayor calidad a día de hoy, con una excelentes prestaciones
 
 ![Titan + E3D v6](./images/titan+ev6.jpg)
 
-## Extrusor Unibody Bq
+Podemos ver las diferentes partes del fusor en este esquema
 
-![](./images/extrusorBQ.png)
-
-Extrusor compacto
+![Extrusor E3D v6.1](./images/v-6-175-500-x-500.png)
 
 
+* Extrusor Unibody Bq, muy unitilizado y compacto, aunaue con el problema de que tiene un elevado coste
+
+![Exturosr Unidoby de Bq](./images/extrusorBQ.png)
 
 
 ## Impresoras que no utilizan filamento
 
-Existen alguna extrusores que no usan filamento y que pueden trabajar directamente con el plástico en un formato que se suele conocer como *pelets*, que son pequeñas bolitas de plástico con el que se pueden trabajar perfectamente. 
+Existen algunos extrusores que no usan filamento y que pueden trabajar directamente con el plástico en un formato que se suele conocer como *pelets*, que son pequeñas bolitas de plástico con el que se pueden trabajar perfectamente. 
 
 Estos extrusores son algo más complejos ya que suelen incluir una especie de depósito o tolva que van extrayendo la cantidad adecuada de este plástico al mismo tiempo que lo van rompiendo, comprimiendo y fundiendo.
 
-![](./images/extrusorPelets.jpg)
+![Extrusor con la tolva de pelets](./images/extrusorPelets.jpg)
 
-![](./images/universal_pellet_extruder_3d_druck_3d_printing1.jpg)
-
-
-Para ello utilizan una broca especial conectada al motor del extrusor que va moviento el plástico a la velocidad adecuada
-
-![](./images/broca.jpg)
+![Extrusor de pelets montado en la impresora](./images/universal_pellet_extruder_3d_druck_3d_printing1.jpg)
 
 
+Para ello utilizan una broca especial conectada al motor del extrusor que va moviendo el plástico a la velocidad adecuada hacia la zona del fusor:
+
+![Broca de pelets](./images/broca.jpg)
 
 
