--- a/4.0.3.Kits.md
+++ b/4.0.3.Kits.md
@@ -7,16 +7,21 @@ Habitualmente los kits están formados por todas las piezas que necesitamos para
 
 ![Piezas plásticas para una típica I3](./images/kit-de-piezas-plasticas-en-abs-para-impresora-3d-prusa-i3-322501-MLA20343446241_072015-F.jpg)
 
-*  Piezas mecánicas: tornillos, tuercas, arandelas, varillas, husillos, rodamiento, ...
+*  Piezas mecánicas: tornillos, tuercas, arandelas, varillas, husillos, rodamientos, ...
 
-![piezas](./images/prusa_i3_frame_kit_yellow_parts.png)
+![Piezas de la estructura](./images/prusa_i3_frame_kit_yellow_parts.png)
 
 También existen impresoras que utilizan una estructura completamente metálica, sin necesidad de piezas impresas en plástico. Conseguimos una mayor rigidez de la estructura, lo que nos permite alcanzar mayores velocidades a costa de tener que adquirir estas piezas puesto que no podemos imprimir las con ninguna otra impresora. A este tipo de impresoras se las conocía como Prusa Steel.
 
-![Piezas de la estructrua de una Prusa Steel](./images/600px-PRUSA_i3_steel_3mm_lasercut_2.01d_irobri_color.jpg)
+![Piezas de la estructura de una Prusa Steel](./images/600px-PRUSA_i3_steel_3mm_lasercut_2.01d_irobri_color.jpg)
+
+Si incluimos todos los componentes de la electrónica, los del extrusor...
+
+![Piezas de la electronica y estructura](./images/pack-vitaminas-completo-prusa-i3.jpg)
+
+Y si ahora juntamos toooodas las piezas...
+
+![Componentes de un kit de impresora Prusa I3](./images/img_3948.jpg)
 
 
-![3](./images/pack-vitaminas-completo-prusa-i3.jpg)
-
-![4](./images/img_3948.jpg)
-
+A día de hoy las impresoras en kits suelen tener muchas menos piezas, y la mayoría de las comerciales vienen semimontadas.
