--- a/4.1.0.Geometrias.md
+++ b/4.1.0.Geometrias.md
@@ -1,30 +1,32 @@
-##### Geometrías:
+## Geometrías de impresoras 3D
 
-Origen: el CNC
+Vamos a ver ahora algunas geometrías distintas de impresoras.
 
+### Cartesainas
 
 La típica estructura x y z llamada **cartesianas** por motivo obvio. Cumple el cometido de calidad y de velocidad perfectamente, al mismo tiempo que ganamos una gran sencillez en el montaje uso y mantenimiento si encontramos un error obviamente sé es fácil de encontrar en qué parte de la impresora está el problema
 
-![i3](./images/cartesianas.png)
+![Típica impresora de geometría cartesiana](./images/cartesianas.png)
 
-## Corexy
+
+### Core XY
+
+Otra típica arquitectura es la llamada **Core xy** que se refiere a un sistema de movimiento simétrico en los ejes que proporciona una mayor velocidad y una mayor estabilidad. El costo es una mayor complejidad en la calibración y en el montaje lo que hace que la mayoría de estas impresoras están reservadas para un usuario más especializado:
+
 ![corexy](./images/smartrapcore-02.jpg)
 
-Una típica arquitectura Core xy se refiere a un sistema de movimiento simétrico en los ejes que proporciona una mayor velocidad y una mayor estabilidad el costo es una mayor complejidad en la calibración y en el montaje lo que hace que la mayoría de esta impresora están reservadas para un usuario más especializado
 
 
-
-
-Si utilizamos una mecánica más compleja como la core x a podemos encontrar que el reparar alguno de estos errores es más complicado para el usuario medio
+Si utilizamos una mecánica más compleja como la core xy nos podemos encontrar que reparar alguno de los típicos problemas sea más complicado para el usuario medio.
 
 
 ## Impresoras Delta
 
 Las impresoras de arquitectura  **Delta** tienen simetría cilíndrica y permiten conseguir una gran velocidad dado fractura además están muy pensadas para trabajar con pieza con simetría cilíndrica y permiten escalar fácilmente la altura para conseguir un tamaño de impresión en el eje z muy elevado. 
 
-Veamos un modelo antiguo para entender la complejidad. En este caso hay un motor en cada una de los 3 ejes que mueve una varilla roscada para deslizar verticalmente el patín.
+Veamos un modelo antiguo para entender la complejidad. En este caso hay un motor en cada uno de los 3 ejes que mueve una varilla roscada para deslizar verticalmente el patín.
 
-![reprap delta](http://jeromeabel.net/files/ressources/democratie-industrielle/bonus-images/fab/delta-robot-reprap-helium-frog.jpg)
+![RepRap delta](http://jeromeabel.net/files/ressources/democratie-industrielle/bonus-images/fab/delta-robot-reprap-helium-frog.jpg)
 
 Veamos un modelo comercial donde se utilizan patines que deslizan por la estructura de los ejes que está hecha con perfiles de aluminio:
 
